cmake_minimum_required(VERSION 3.15)
project(Homework2)

set(CMAKE_CXX_STANDARD 11)

add_executable(Homework2 sortedverification.cpp consistentresultverification.cpp quicksort.h quicksort.cpp
        insertionsort.cpp insertionsort.h mergesort.cpp mergesort.h timealgorithms.cpp extern.h createdata.cxx)